Fixed bug on mobile which caused plan text to be default link color and removed mobile viewport height fix

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -249,9 +249,10 @@
     transition:all .3s;
     box-shadow: 0 0 0 rgba(0,0,0,0.15);
     text-decoration: none;
+    color:$black;
 
     &:visited{
-        color:black;
+        color:$black;
     }
 
     &__extra{
